# src/service-account/internal/handler/http/transaction_history.go
@@ -4,19 +4,22 @@ import (
 	"encoding/json"
 	"errors"
 	"net/http"
+	"strconv"
 
 	"github.com/Adopten123/banking-system/service-account/internal/domain"
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
 )
 
-// @Summary История транзакций (выписка)
-// @Description Возвращает список всех операций по указанному счету, отсортированный от новых к старым
+// @Summary Получить историю транзакций
+// @Description Возвращает список транзакций по счету с поддержкой пагинации
 // @Tags accounts
 // @Produce json
-// @Param id path string true "Public ID счета (UUID)"
-// @Success 200 {array} domain.TransactionHistory "Список транзакций"
-// @Failure 400 {object} map[string]string "Неверный формат ID"
+// @Param id path string true "Public ID счета"
+// @Param limit query int false "Количество записей (по умолчанию 20)"
+// @Param offset query int false "Смещение (по умолчанию 0)"
+// @Success 200 {array} domain.TransactionHistory"
+// @Failure 400 {object} map[string]string "Неверный запрос"
 // @Failure 404 {object} map[string]string "Счет не найден"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
 // @Router /api/accounts/{id}/transactions [get]
@@ -28,7 +31,23 @@ func (h *Handler) getTransactions(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	history, err := h.service.GetAccountTransactions(r.Context(), publicID)
+	query := r.URL.Query()
+	limit := int32(20)
+	offset := int32(0)
+
+	if l := query.Get("limit"); l != "" {
+		if parsedLimit, err := strconv.ParseInt(l, 10, 32); err == nil && parsedLimit > 0 {
+			limit = int32(parsedLimit)
+		}
+	}
+
+	if o := query.Get("offset"); o != "" {
+		if parsedOffset, err := strconv.ParseInt(o, 10, 32); err == nil && parsedOffset >= 0 {
+			offset = int32(parsedOffset)
+		}
+	}
+
+	history, err := h.service.GetAccountTransactions(r.Context(), publicID, limit, offset)
 	if err != nil {
 		if errors.Is(err, domain.ErrAccountNotFound) {
 			respondWithError(w, http.StatusNotFound, "NOT_FOUND", "Account not found", err)
